--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ Do the following if you're using your customized build of modernizr (http://www.
 <div name="AboutMe" class="Block" id="AboutMe">
 <div id="AboutMeText">
   <h1> About Me </h1>
-<p>I am a mechatronics engineering student at McMaster University  who has a passion for  technology and innovation. My years of experience in robotics had helped me grow as an engineer and a person. The purpose of this website is to share some of my accomplishments and expand my knowledge on web development.</p></div>
+<p>I am a student of McMaster Univarsity, studying Mechatronics Engineering, who has a passion for  technology and innovation. My years of experience in robotics had helped me grow as an engineer and a person. The purpose of this website is to share some of my accomplishments and expand my knowledge on web development.</p></div>
 <div id="AboutMePhoto" Class="Title"><p><img src="11062379_10200468276227128_3031736896492371818_o.jpg" width=100%></p>
 </div>
 </div>
