--- a/Projects/EcoCAR/index.html
+++ b/Projects/EcoCAR/index.html
@@ -97,8 +97,8 @@ Do the following if you're using your customized build of modernizr (http://www.
       <div id="LayoutDiv1">
 	      <div class="Image"><p><img src="10314570_791737187547731_7611673542938501951_n.jpg" width="100%"></p></div>
           <div class="Paragraph"><P><a href="http://ecocar3.org/">EcoCAR 3</a> is the latest in the U.S. Department of Energy (DOE) Advanced Vehicle Technology
-      Competition (AVTC) series.  AVTCs represent a unique collaboration of government, industry, and academic partners 
-      who combine resources to explore sustainable transportation solutions.16 North American Universites have been 
+      Competition (AVTC) series.  AVTCs represent a unique collaboration between government, industry, and academic partners 
+      who combine resources to explore sustainable transportation solutions. Sixteen North American Universites have been 
       challenged to re-engineer a Chevrolet Camaro into a hybrid-electric vehicle over a course of 4 years.</P></div>
 </div>
 
@@ -106,8 +106,8 @@ Do the following if you're using your customized build of modernizr (http://www.
     
   <div id="LayoutDiv2">
     <div class="Image"><p><img src="freescale.png" width="100%"></p></div>
-    <div class="Paragraph"><P>This project has many different roles as each team is required to design, simulate, 
-      modify and test the vehicle powertrains. For the past year I have been involved with the low level software development
+    <div class="Paragraph"><P>This project has many different roles, as each team is required to design, simulate, 
+       modify and test the vehicle powertrains. For the past year I have been involved with the low level software development
        of the car. I have helped program new functionality and in the process learned a lot about the development process of 
        the car. During the year i have been able to apply my knowledge in C# to programming freescale processors and inturn 
        execute cerain tasks. furthermore I was able to apply my knowledge about the software development process and create 
