--- a/Projects/Class/index.html
+++ b/Projects/Class/index.html
@@ -9,7 +9,7 @@
 <meta charset="utf-8">
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>In Class Projects</title>
+<title>Prakhar Garg | Class Projects</title>
 <link href="../../../../../../Program Files (x86)/Adobe/Adobe Dreamweaver CS6/Configuration/BuiltIn/Fluid Grid Layout/boilerplate.css" rel="stylesheet" type="text/css">
 <link href="../projects.css" rel="stylesheet" type="text/css">
 <link href="../../SpryAssets/SpryMenuBarHorizontal.css" rel="stylesheet" type="text/css">
@@ -98,7 +98,7 @@ Do the following if you're using your customized build of modernizr (http://www.
     <div id="LayoutDiv1">
 		<div class="Image"><p><img src="pen paper.jpg"></p></div>
         <div class="Paragraph">
-			<P>Studying in Woburn C.I. and McMaster University has given me mny opporunities to work on projects relevent to Engineering.	Through	these I have learned about the proper process required to build a system according to the specification. Some relavent projects I have worked on are Building an Analog to Digital Converter, and building the internal gearing to a CD Drive. </P>
+			<P>Studying in Woburn C.I. and McMaster University has given me many opportunities to work on projects relevant to Engineering. Through these I have learned about the proper process required to build a system according to the specification. Some relevant projects I have worked on are Building an Analog to Digital Converter, and building the internal gearing to a CD Drive. </P>
         </div>
 	</div>
 
@@ -109,7 +109,7 @@ Do the following if you're using your customized build of modernizr (http://www.
       <p><img src="Project Class.jpg"></p>
     </div>
     <div class="Paragraph">
-      <P>The most recent class project I worked on was to design and construct an analog to digital converter with electrical components. The board was designed and simulated on National Instruments Multisim. once the simulations were sucessful, the circuit was constructed on a breadboard using a myDAQ to provide the signal and read the feedback by the computer. </p></div>
+      <P>The most recent class project I worked on was to design and construct an analog to digital converter with electrical components. The board was designed and simulated on National Instruments MultiSim. Once the simulations were successful, the circuit was constructed on a breadboard using a <a href="http://www.ni.com/mydaq/">myDAQ</a> to provide the signal and read the feedback by the computer.</p></div>
       <div class="Document">
       <object data="prakhar report.pdf" type="application/pdf" width="100%" height="400px">
  
@@ -124,7 +124,7 @@ Do the following if you're using your customized build of modernizr (http://www.
   <div id="LayoutDiv2">
     <div class="Image"><p><img src="render.jpg" width="100%"></p></div>
     <div class="Paragraph">
-      <P>Similarly I have worked on projects related to designing and manufacturing mechanical parts for a CD Drive. The simulation and design of this particular project was done on Autodesk Inventor and Maple Sim. Once the design was validated, a protoype was manufactured on a RepRap 3D printer <a href="https://github.com/SNavleen/Stranger"></a>and tested. The project helpd me learn a lot about the modeling and simulatin capabilities of Maple Sim</P></div>
+      <P>Similarly I have worked on projects related to designing and manufacturing mechanical parts for a CD Drive. The simulation and design of this particular project was done on Autodesk Inventor and MapleSim. Once the design was validated, a prototype was manufactured on a RepRap 3D printer and tested. The project helped me learn a lot about the modeling and simulation capabilities of MapleSim.</P></div>
       <div class="Document">
 <object data="Design.pdf" type="application/pdf" width="100%" height="400px">
  
