--- a/Projects/QuadSim/index.html
+++ b/Projects/QuadSim/index.html
@@ -8,7 +8,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>QuadSim</title>
+<title>Prakhar Garg | QuadSim</title>
 <link href="index.css" rel="stylesheet" type="text/css">
 <link href="../../../../../../Program Files (x86)/Adobe/Adobe Dreamweaver CS6/Configuration/BuiltIn/Fluid Grid Layout/boilerplate.css" rel="stylesheet" type="text/css">
 <link href="../projects.css" rel="stylesheet" type="text/css">
